--- a/style1.css
+++ b/style1.css
@@ -1,7 +1,6 @@
 body {
-    background: lightgray;
-    border-radius: 5px;
-}
+     background: lightgray;
+ }
 
 ul {
     list-style-type: none;
@@ -19,10 +18,6 @@ li:first-child {
     margin-left: 0;
 }
 
-li:hover {
-    background: red;
-}
-
 a {
     text-decoration: none;
     color: blue;
@@ -30,4 +25,27 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+footer {
+    text-align: center;
+}
+
+.fd {
+    font-size: 150%;
+}
+
+#frank {
+    font-size: 120%
+}
+
+section {
+    margin-left: 0px;
+}
+
+.download {
+    color: white;
+    background: lawngreen;
+    padding: 10px;
+    margin-top: 20px;
 }
