--- a/style1.css
+++ b/style1.css
@@ -1,17 +1,18 @@
 body {
-     background: lightgray;
+
  }
 
-ul {
+ul{
     list-style-type: none;
     padding : 0;
 }
 
-li {
+li{
     display: inline;
     margin-left: 20px;
     border-radius: 5px;
     padding: 2px;
+
 }
 
 li:first-child {
@@ -33,14 +34,11 @@ footer {
 
 .fd {
     font-size: 150%;
-}
-
-#frank {
-    font-size: 120%
+    color: white;
 }
 
 section {
-    margin-left: 0px;
+    margin-left: 0;
 }
 
 .download {
@@ -48,4 +46,11 @@ section {
     background: lawngreen;
     padding: 10px;
     margin-top: 20px;
+}
+
+.dh {
+    text-align: center;
+    font-size: 150%;
+    padding-left: 10px;
+    padding-right: 10px;
 }
