--- a/css/style1.css
+++ b/css/style1.css
@@ -24,20 +24,30 @@ a:hover {
     text-decoration: underline;
 }
 
-header .mobile {
-    display: none;
+header ul {
+    text-align: center;
+    font-size: 140%;
+    padding-left: 10px;
+    padding-right: 10px;
 }
+header li {
+    text-align: center;
+    font-size: 140%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 
 @media screen and (max-width: 421px){
     body {
         font-size: 90%;
     }
     header li {
-        padding: 0;
+        padding: 10px;
         display: inline-block;
         margin: 0;
         flex-wrap: nowrap;
-        font-size: 50%;
+        font-size: 120%;
     }
     #video {
         width: 95%;
@@ -72,20 +82,6 @@ section {
     display: inline-block;
     border-radius: 3px;
 }
-
-header ul {
-    text-align: center;
-    font-size: 140%;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-header li {
-    text-align: center;
-    font-size: 140%;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
 .hide {
     display: none;
 }
